# OneClickCategorize

./: .gitignore  CMakeLists.txt  appOneClickCategorize_qml_module_dir_map.qrc  folderscanner.cpp  folderscanner.h  main.cpp  qmldir  test.json
OneClickCategorize/: CMakeLists.txt  Main.qml  folderscanner.h  main.cpp
OneClickCategorize/components/: Button.qml  DashboardState_HasRecentRun.qml  DashboardState_NoRecentRun.qml  ExtensionChip.qml  Folder.qml  FolderTextInput.qml
OneClickCategorize/screens/: Dashboard.qml
OneClickCategorize/texts/: ButtonText.qml  HeadingText.qml  SubheadingText.qml
components/: DashboardState_HasRecentRun.qml  DashboardState_NoRecentRun.qml  ExtensionChip.qml  Folder.qml  FolderTextInput.qml  InputArea.qml
screens/: Dashboard.qml  LoginScreen.qml
texts/: HeadingText.qml  SubheadingText.qml
